[gd_scene load_steps=6 format=2]

[ext_resource path="res://EndGame.gd" type="Script" id=1]
[ext_resource path="res://PermanentMarker-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 144
outline_size = 6
outline_color = Color( 0.121569, 0.654902, 0.0117647, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 96
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 96
font_data = ExtResource( 2 )

[node name="EndGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
custom_constants/margin_right = 120
custom_constants/margin_top = 120
custom_constants/margin_left = 120
custom_constants/margin_bottom = 120

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 120.0
margin_top = 120.0
margin_right = 1800.0
margin_bottom = 960.0
custom_constants/separation = 50

[node name="PointsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1680.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.501961, 1, 0, 1 )
text = "1 poäng"
align = 1

[node name="PlayAgainButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 1680.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 2 )
text = "Spela igen"

[node name="MenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 450.0
margin_right = 1680.0
margin_bottom = 594.0
custom_fonts/font = SubResource( 3 )
text = "Gå till menyn"
